@@ -188,6 +188,7 @@ class Rules
         void termToNonterm(Symbol *term, Symbol *nonTerm);
 
     private:
+        static bool isTerminal(Symbol const *symbol);
         static void updatePrecedence(Production *production, 
                                      Terminal::Vector const &tv);
 };
